// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has-community-infrastructure-levy GET /has-community-infrastructure-levy/change should render the change community infrastructure levy status page with "Does not have infrastructure levy" radio option checked if hasInfrastructureLevy is false 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change community infrastructure levy status</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="hasCommunityInfrastructureLevyRadio"
                            name="hasCommunityInfrastructureLevyRadio" type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="hasCommunityInfrastructureLevyRadio">Has infrastructure levy</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="hasCommunityInfrastructureLevyRadio-2"
                            name="hasCommunityInfrastructureLevyRadio" type="radio" value="no" checked>
                            <label class="govuk-label govuk-radios__label" for="hasCommunityInfrastructureLevyRadio-2">Does not have infrastructure levy</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`has-community-infrastructure-levy GET /has-community-infrastructure-levy/change should render the change community infrastructure levy status page with "Has infrastructure levy" radio option checked if hasInfrastructureLevy is true 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change community infrastructure levy status</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="hasCommunityInfrastructureLevyRadio"
                            name="hasCommunityInfrastructureLevyRadio" type="radio" value="yes" checked>
                            <label class="govuk-label govuk-radios__label" for="hasCommunityInfrastructureLevyRadio">Has infrastructure levy</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="hasCommunityInfrastructureLevyRadio-2"
                            name="hasCommunityInfrastructureLevyRadio" type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="hasCommunityInfrastructureLevyRadio-2">Does not have infrastructure levy</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
